tests/baselines/reference/ClassDeclaration21.errors.txt
ClassDeclaration21.ts(3,5): error TS2389: Function implementation name must be '0'.


==== ClassDeclaration21.ts (1 errors) ====
    class C {
        0();
        1() { }
        ~
!!! error TS2389: Function implementation name must be '0'.
    }